# lemat-genbench

./: EVALUATION.md  README.md  pyproject.toml
scripts/: run_benchmarks.py
scripts/hamgnn/: README.md  environment.yml  setup_hamgnn.sh  smoke_test.py
src/config/: band_gap.yaml  migration_barrier.yaml  property.yaml
src/lemat_genbench/: __init__.py  cli.py
src/lemat_genbench/benchmarks/: band_gap_benchmark.py  migration_barrier_benchmark.py  property_benchmark.py
src/lemat_genbench/data/: structure.py
src/lemat_genbench/metrics/: band_gap_metric.py  migration_barrier_metric.py
src/lemat_genbench/preprocess/: band_gap_preprocess.py
src/lemat_genbench/properties/: __init__.py  band_gap_backends.py  migration_barrier.py
tests/: test_band_gap_preprocess.py
tests/metrics/: test_band_gap_metric.py  test_migration_barrier_metric.py
